--- a/imageqa_supplementary_nips2015.tex
+++ b/imageqa_supplementary_nips2015.tex
@@ -26,7 +26,8 @@ Canadian Institute for Advanced Research${}^2$\\
 \texttt{\{mren, rkiros, zemel\}@cs.toronto.edu}
 }
 
-\title{Supplemenary Materials for ``Exploring Models and Data for Image Question Answering''}
+\title{Supplementary Materials for ``Exploring Models and Data for Image
+Question Answering''}
 
 \newcommand{\fix}{\marginpar{FIX}}
 \newcommand{\new}{\marginpar{NEW}}
@@ -42,9 +43,10 @@ Canadian Institute for Advanced Research${}^2$\\
     \centering
     \small
     \scalebox{0.8}{
-    \Tree [.S [.NP [.DET a ] [.N man ] ] [.VP [.V is ] [.NP [.VBG riding ] [.NP [.DET a ] [.N horse ] ] ] ] ]}
-    \scalebox{0.8}{
-    \Tree [.S [.WHNP [.WP \textbf{what} ] ] [.S [.V is ] [.NP [.DET \textbf{the} ] [.N man ] ] [.VP [.V \sout{is} ] [.NP [.VBG riding ] [.WHNP [.WP \sout{what} ] ] ] ] ] ]}
+    \Tree [.S [.NP [.DET a ] [.N man ] ] [.VP [.V is ] [.NP [.VBG riding ] [.NP
+    [.DET a ] [.N horse ] ] ] ] ]} \scalebox{0.8}{ \Tree [.S [.WHNP [.WP
+    \textbf{what} ] ] [.S [.V is ] [.NP [.DET \textbf{the} ] [.N man ] ] [.VP
+    [.V \sout{is} ] [.NP [.VBG riding ] [.WHNP [.WP \sout{what} ] ] ] ] ] ]}
     \vspace{5mm}
     \caption{Example: ``A man is riding a \textbf{horse}'' $=>$ ``\textbf{What} is \textbf{the} man riding?''}
     \label{fig:what_gen}
@@ -52,9 +54,9 @@ Canadian Institute for Advanced Research${}^2$\\
 
 \subsection{Post-Processing of COCO-QA Detail}
 \label{app:post_process}
-First, answers that appear less than a frequency threshold are discarded. 
-Second we enroll a QA pair one at a time. 
-The probability of enrolling the next QA pair $(q, a)$ is:
+First, answers that appear less than a frequency threshold are discarded.
+Second, we enroll a QA pair one at a time.  The probability of enrolling the
+next QA pair $(q, a)$ is:
 \begin{equation}
 p(q, a) = \left\{ \begin{array}{cl}
 1 &\mbox{ if count$(a)$ $\le K$ } \\
@@ -62,8 +64,8 @@ p(q, a) = \left\{ \begin{array}{cl}
 \end{array} \right.
 \end{equation}
 where $count(a)$ denotes the current number of enrolled QA pairs that have $a$
-as the ground truth answer, and $K$, $K_2$ are some constants with $K \le
-K_2$. In the COCO-QA generation we chose $K = 100$ and $K_2 = 200$. 
+as the ground truth answer, and $K$, $K_2$ are some constants with $K \le K_2$.
+In the COCO-QA generation we chose $K = 100$ and $K_2 = 200$. 
 
 \clearpage
 \subsection{More Sample Questions and Responses}
@@ -205,7 +207,8 @@ $\begin{array}{p{3.2cm} p{3.2cm} p{3.2cm} p{3.2cm}}
     \parbox{3.2cm}{
         \vskip 0.05in
           COCOQA 35\\
-          \textbf{How many red velvet cup cakes with no frosting on a flowered plate?}\\
+          \textbf{How many red velvet cup cakes with no frosting on a flowered
+          plate?}\\
           Ground truth: three\\
           IMG+BOW: \textcolor{green}{three (0.43)}\\
           2-VIS+BLSTM: \textcolor{green}{three (0.26)}\\
@@ -217,7 +220,8 @@ $\begin{array}{p{3.2cm} p{3.2cm} p{3.2cm} p{3.2cm}}
     \parbox{3.2cm}{
         \vskip 0.05in
           COCOQA 21446\\
-          \textbf{How many different types of carrying cases in various colors?}\\
+          \textbf{How many different types of carrying cases in various
+          colors?}\\
           Ground truth: four\\
           IMG+BOW: \textcolor{green}{four (0.69)}\\
           2-VIS+BLSTM: \textcolor{green}{four (0.26)}\\
@@ -228,7 +232,8 @@ $\begin{array}{p{3.2cm} p{3.2cm} p{3.2cm} p{3.2cm}}
     \parbox{3.2cm}{
         \vskip 0.05in
           COCOQA 25600\\
-          \textbf{How many double deckered busses parked near the green truck?}\\
+          \textbf{How many double deckered busses parked near the green
+          truck?}\\
           Ground truth: three\\
           IMG+BOW: \textcolor{red}{two (0.89)}\\
           2-VIS+BLSTM: \textcolor{red}{two (0.44)}\\
@@ -256,15 +261,23 @@ $\begin{array}{p{3.2cm} p{3.2cm} p{3.2cm} p{3.2cm}}
 \tiny
 $\begin{array}{p{3.2cm} p{3.2cm} p{3.2cm} p{3.2cm}}
     \scalebox{0.23}{
-        \includegraphics[width=\textwidth, height=.7\textwidth]{298.jpg}}
+        \includegraphics[width=\textwidth, height=.7\textwidth]{16330.jpg}}
     \parbox{3.2cm}{
         \vskip 0.05in
-        COCOQA 298\\
-        \textbf{What is the color of the airplane?}\\
+        COCOQA 16330\\
+        \textbf{What is the color of the bowl?}\\
         Ground truth: blue\\
-        IMG+BOW: \textcolor{green}{blue (0.48) }\\
-        2-VIS+LSTM: \textcolor{green}{blue (0.33) }\\
-        BOW: \textcolor{red}{white (0.38)}
+        IMG+BOW: \textcolor{green}{blue (0.83) }\\
+        2-VIS+LSTM: \textcolor{green}{blue (0.90) }\\
+        BOW: \textcolor{red}{white (0.45}
+
+        \vskip 0.05in
+        COCOQA 16330a\\
+        \textbf{What is the color of the cat?}\\
+        Ground truth: gray\\
+        IMG+BOW: \textcolor{green}{gray (0.45)}\\
+        2-VIS+BLSTM: \textcolor{red}{blue (0.32)}\\
+        BOW: \textcolor{red}{gray (0.40)}
 }
 &
     \scalebox{0.23}{
@@ -346,15 +359,15 @@ $\begin{array}{p{3.2cm} p{3.2cm} p{3.2cm} p{3.2cm}}
 }
 &
     \scalebox{0.23}{
-        \includegraphics[width=\textwidth, height=.7\textwidth]{6662.jpg}}
+        \includegraphics[width=\textwidth, height=.7\textwidth]{13340.jpg}}
     \parbox{3.2cm}{
         \vskip 0.05in
-        COCOQA 6662\\
-        \textbf{Where does the small kitten sit?}\\
-        Ground truth: bowl\\
-        IMG+BOW: \textcolor{green}{bowl (0.55)}\\
-        2-VIS+LSTM: \textcolor{green}{bowl (0.40)}\\
-        BOW: \textcolor{red}{chair (0.14)}
+        COCOQA 13340\\
+        \textbf{Where are beans and green vegetables?}\\
+        Ground truth: pan\\
+        IMG+BOW: \textcolor{green}{pan (0.55)}\\
+        2-VIS+LSTM: \textcolor{green}{pan (0.44)}\\
+        BOW: \textcolor{red}{bowl (0.20)}
 }
 &
     \scalebox{0.23}{
